# nuka-world

./: .env.example  .env.test  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  README.zh-CN.md  deploy.sh  docker-compose.yml  go.mod  go.sum
agents/_template/: Agent.md  GOALS.md  SOUL.md
agents/world/: Agent.md  GOALS.md  SOUL.md
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: app_state.rs  lib.rs  main.rs  settings.rs  tray.rs
apps/desktop/src-tauri/src/commands/: agents.rs  app.rs  chat.rs  knowledge.rs  memory.rs  mod.rs  providers.rs  tools.rs  workflow.rs
cmd/chat/: main.go
cmd/nuka/: main.go
configs/: nuka.json
crates/nuka-domain/: Cargo.toml
crates/nuka-integrations/: Cargo.toml
crates/nuka-knowledge/: Cargo.toml
crates/nuka-memory/: Cargo.toml
crates/nuka-runtime/: Cargo.toml
crates/nuka-storage/: Cargo.toml
crates/nuka-storage/migrations/: 0001_initial.sql
crates/nuka-storage/src/: db.rs  lib.rs  migrations.rs  workflows.rs
crates/nuka-tools/: Cargo.toml
docs/: ARCHITECTURE.md  DESIGN.md  flow.md  readme-diagrams.pen  usage-guide.md
docs/plans/: 2026-02-26-backend-e2e-design.md  2026-02-26-backend-e2e-plan.md  2026-02-26-nuka-enhancement-design.md  2026-02-26-nuka-enhancement-plan.md  2026-02-26-platform-connectivity-design.md  2026-02-27-squash-and-e2e-design.md  (+9 more)
migrations/: 001_init.up.sql  002_skills.up.sql  005_providers.up.sql  006_a2a.up.sql  007_workflows.up.sql
web/: package-lock.json
(+172 files in other folders)
