[package]
name = "desktop-tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "desktop_tauri"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "desktop-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
